fix: fixed some issues with slider not centered their elemenst and change the dots color

--- a/src/components/reviews/reviews.scss
+++ b/src/components/reviews/reviews.scss
@@ -4,6 +4,25 @@
     max-width: 1160px;
     width: 100%;
 
+    .review__subtitle{
+        span {
+            color: #f0bc5e;
+        }
+    }
+
+    .slick-slider {
+        
+        position: relative;
+        display: block;
+        box-sizing: border-box;
+        user-select: none;
+        touch-action: pan-y;
+
+        .slick-dots li button:before {
+            color: orange;
+          }
+
+    }
     .section__title {
         line-height: 125%;
         margin-bottom: 10px;
@@ -33,19 +52,16 @@
         margin-inline-end: 0px;
     }
     .review__card {
+        margin: auto;
         position: relative;
         max-width: 810px;
         padding: 55px;
-        display: -webkit-box;
-        display: -ms-flexbox;
         display: flex;
         flex-direction: column;
         box-shadow: 0 4px 25px rgb(0 0 0 / 5%);
         border-radius: 10px;
         .review__info {
             margin-bottom: 20px;
-            display: -webkit-box;
-            display: -ms-flexbox;
             display: flex;
             .review__info-img {
                 margin-right: 20px;
@@ -63,6 +79,18 @@
                 }
                 
             }
+        }
+    }
+
+    .review__btn {
+        padding-top: 40px;
+        display: flex;
+        justify-content: center;
+        .link {
+            position: relative;
+            padding-bottom: 5px;
+            border-bottom: 1px solid #dbdbdb;
+            color: #3f3f3f;
         }
     }
 }
